fix: warn with align-itens start

--- a/src/components/ui/BlogCard/BlogCard.scss
+++ b/src/components/ui/BlogCard/BlogCard.scss
@@ -55,7 +55,7 @@
     padding: 0 $padding-base;
     display: flex;
     flex-direction: column;
-    align-items: start;
+    align-items: flex-start;
     justify-content: center;
     height: 100%;
   }
